--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -1,4 +1,5 @@
 <html>
+    <center>
     <head>
         <title>Creer un potin</title>
     </head>
@@ -6,9 +7,11 @@
         <h1>Creer un potin !</h1>
         <p>Balance ton potin via le formulaire ci-dessous</p>
         <form action='/gossips/new/' method='POST'>
-            Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
+            Saisi ici ton nom :  <input type='text' name='gossip_name'/><br/>
             Balance ton potin : <input type='text' name='gossip_content'/><br/>
+            </br>
             <input type='submit'/>
         </form>
+        <a href="/">Revenir a la page principale !</a>
     </body>
 </html>
